<resources>
    <string name="app_name">GoodBam</string>
    <string name="Login_id">ID</string>
    <string name="Login_pass">PASSWORD</string>
    <string name="Login_sign_in">로그인</string>
    <string name="Login_sign_up">회원가입</string>
    <string name="Login_find">ID/PASS 찾기</string>

    <string name="Signup_main">회원가입</string>
    <string name="Signup_name">이름</string>
    <string name="Signup_name_hint">이름을 입력하세요.</string>
    <string name="Signup_id">아이디</string>
    <string name="Signup_id_hint">아이디를 입력하세요.</string>
    <string name="Signup_id_check">중복확인</string>
    <string name="Signup_pass1">비밀번호</string>
    <string name="Signup_pass1_hint">6자 이상의 영문자/숫자를 조합해주세요.</string>
    <string name="Signup_pass2">비밀번호 확인</string>
    <string name="Signup_pass2_hint">비밀번호를 입력하세요.</string>
    <string name="Signup_btn_next">다음</string>

    <string name="Signup2_main">회원가입</string>
    <string name="Signup2_Question">질문설정</string>
    <string name="Signup2_answer">질문답변</string>
    <string name="Signup2_answer_hint">10자 내로 쓰시오.</string>
    <string name="Signup2_finish">회원가입</string>

    <string name="ID_search_main">아이디 찾기</string>
    <string name="ID_search_find_pass">비밀번호 찾기</string>
    <string name="ID_search_name">이름</string>
    <string name="ID_search_name_hint">이름을 입력하세요.</string>
    <string name="ID_search_answer_hint">질문에 대한 답변을 제출하세요.</string>
    <string name="ID_search_btn_find">찾기</string>

    <string name="Pass_search_main">비밀번호 찾기</string>
    <string name="Pass_search_find_id">아이디 찾기</string>
    <string name="Pass_search_name">이름</string>
    <string name="Pass_search_name_hint">이름을 입력하세요.</string>
    <string name="Pass_search_id">아이디</string>
    <string name="Pass_search_id_hint">아이디을 입력하세요.</string>
    <string name="Pass_search_answer_hint">질문에 대한 답변을 제출하세요.</string>
    <string name="Pass_search_btn_find">찾기</string>

    <string name="Email_send_main">이메일 인증</string>
    <string name="Email_send_hint">ex) GoodBam@gmail.com</string>
    <string name="Email_send_btn">인증</string>

    <string name="Setting_main">온/습도 제어</string>
    <string name="Setting_air_con">에어콘</string>
    <string name="Setting_humidifier">가습기</string>
    <string name="Setting_btn_save">저장</string>

</resources>