<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="4"
                android:src="@drawable/goodbam"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1.1">
<!--                <LinearLayout-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1"/>-->

                <EditText
                    android:id="@+id/login_et_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:background="@drawable/text_border"
                    android:drawableLeft="@drawable/id3"
                    android:drawablePadding="10dp"

                    android:hint="@string/Login_id" />
<!--                <LinearLayout-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1"/>-->
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1.1">

                <EditText
                    android:id="@+id/login_et_pw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:background="@drawable/text_border"
                    android:drawableLeft="@drawable/psw3"
                    android:drawablePadding="10dp"
                    android:hint="@string/Login_pass"

                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.7"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="자동 로그인"
                        android:textSize="15dp" />

                    <CheckBox
                        android:id="@+id/autologin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"

                        android:layout_marginLeft="5dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>
            </LinearLayout>

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/Login_sign_in"
                android:textColor="@color/white"
                android:textSize="22dp"

                />

            <Button
                android:id="@+id/login_btn_signup"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_marginTop="10dp"

                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/Login_sign_up"
                android:textColor="@color/white"
                android:textSize="22dp"

                />

            <Button
                android:id="@+id/login_btn_find"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_marginTop="10dp"

                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_corner"
                android:text="@string/Login_find"
                android:textColor="@color/white"
                android:textSize="22dp"

                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />

</LinearLayout>