<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>

            <ImageButton
                android:id="@+id/id_search_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:src="@drawable/ic_back"
                android:background="@color/white"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"

                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.9"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.7"
                                android:text="@string/ID_search_main"
                                android:textColor="@color/black"
                                android:textSize="22dp" />

                            <Button
                                android:id="@+id/id_search_btn_pass"
                                style="?android:attr/borderlessButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/white"
                                android:text="@string/ID_search_find_pass"
                                android:textColor="@color/orange"
                                android:textSize="16dp" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.7"
                            android:text="@string/ID_search_name"
                            android:textColor="@color/sky"
                            android:textSize="18dp" />

                        <EditText
                            android:id="@+id/id_search_et_name"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1.4"
                            android:backgroundTint="@color/sky"
                            android:hint="@string/ID_search_name_hint"
                            android:paddingLeft="10dp"
                            android:textColorHint="@color/hint"
                            android:textSize="16dp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            />
                        <Spinner

                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:entries="@array/spinnerArray"
                            />

                        <EditText
                            android:id="@+id/id_search_et_ans"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1.4"
                            android:backgroundTint="@color/sky"
                            android:hint="@string/ID_search_answer_hint"
                            android:paddingLeft="10dp"
                            android:textColorHint="@color/hint"
                            android:textSize="16dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="3"/>

                                <Button
                                    android:id="@+id/id_search_btn_find"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/ID_search_btn_find"
                                    android:textColor="@color/button" />
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"/>
</LinearLayout>