<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_page"
    >


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>

            <ImageButton
                android:id="@+id/setting_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:src="@drawable/ic_back"
                android:background="@color/setting_page"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.6"
                            android:text="@string/Setting_main"
                            android:textSize="22dp"
                            android:textColor="@color/black"
                            />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.3"
                                />
                            <Switch
                                android:id="@+id/setting_aircon"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/Setting_air_con"
                                android:textSize="32dp"

                                android:textColor="@color/black2"
                            />
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.3"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1.7"
                            android:orientation="horizontal">
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.3"
                                />
                            <ImageButton
                                android:id="@+id/down_button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.3"
                                android:src="@drawable/ic_angle_left_solid"
                                android:background="@color/setting_page"
                                />
                            <EditText
                                android:id="@+id/temperature"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.3"
                                android:text="24"
                                android:textSize="24dp"
                                android:gravity="center"
                                android:background="@color/setting_page"
                                />
                            <ImageButton
                                android:id="@+id/up_button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.3"
                                android:src="@drawable/ic_angle_right_solid"
                                android:background="@color/setting_page"
                                />
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.3"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.3"
                                />
                            <Switch
                                android:id="@+id/setting_humidifier"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/Setting_humidifier"
                                android:textSize="32dp"
                                android:gravity="center"
                                android:textColor="@color/black2"
                                />
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.3"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            />
                        <Button
                            android:id="@+id/setting_btn_save"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:layout_gravity="right"
                            android:textSize="20dp"
                            android:text="@string/Setting_btn_save"
                            android:textColor="@color/loadingMc"
                            android:background="@color/white"
                            />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"/>

</LinearLayout>